fixed when notice covered up dashboard button on navbart

--- a/app/assets/stylesheets/notices.css
+++ b/app/assets/stylesheets/notices.css
@@ -54,8 +54,8 @@
 .message {
   height:80px; 
   text-align:center; 
-  left:30%; 
-  right:30%; 
+  left:24%; 
+  right:40%; 
   position:absolute; 
   z-index:2;
 }
